# rhea

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  404.html  Dockerfile  Dockerfile.agent  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  squid.conf
.githooks/: pre-commit
.github/workflows/: build-and-push.yaml  publish-pypi.yaml
agent/: schema.py  tool.py  utils.py
client/: __init__.py  base.py  file_download.py  file_download_rest.py  file_upload.py  file_upload_rest.py  index.html  mcp.py  rest.py
configuration/: index.html
deploy/: .env  README.md  docker-compose.gpu.yaml  docker-compose.yaml  index.html
docs/: client.md  configuration.md  examples.md  overview.md
examples/: download_file.py  find_tools.py  index.html  plot_metrics.py  upload_file.py
manager/: launch_agent.py  parsl_config.py  run-multiple.py  run.py  run_test.py  test-manager.py  utils.py
overview/: index.html
preprocess/utils/: process_xml.py
rhea/agent/: tool.py
rhea/server/: schema.py  utils.py
rhea/utils/: from_pickle.py  models.py  process.py
search/: search_index.json
server/: client_manager.py  mcp_server.py  metrics.py  rhea_fastmcp.py  schema.py  utils.py
tests/: test_commands.py
tests/evals/: create_test_csv.py  helpers.py  mcp_get_resource.py  mcp_invoke_basic.py  mcp_invoke_nonpopulated.py  mcp_run_tool_test_multiple.py  mcp_run_tool_test_single.py  mcp_single_tool_scale.py
tests/mcp/: conftest.py  (+3 more)
utils/: embedding.py  from_pickle.py  models.py  process.py  proxy.py  schema.py
(+1 files in other folders)
