[project]
name = "rhea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "academy-py>=0.2.0",
    "black>=25.1.0",
    "cachetools>=6.1.0",
    "cheetah3>=3.2.6.post1",
    "chromadb>=1.0.13",
    "conda-pack>=0.8.1",
    "debugpy>=1.8.14",
    "fastapi[standard]>=0.115.14",
    "mcp[cli]>=1.10.1",
    "minio>=7.2.15",
    "mypy>=1.16.1",
    "openai>=1.93.0",
    "parsl>=2025.6.23",
    "proxystore[all]>=0.8.2",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "shellcheck-py>=0.10.0.1",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "agent", "client", "manager", "lib", "utils"]
exclude = ["test_files", "runinfo"]
